# nic-roaming

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
mockdown/: Cargo.toml
mockdown/src/: atomock.rs  lib.rs  mockdown.rs
mocklib/: Cargo.toml
mocklib/src/: atomock.rs  lib.rs  mocklib.rs
net/: Cargo.toml
net-sys/: Cargo.toml
net-sys/src/: format.rs  ifname.rs  lib.rs  libc.rs  lladdr.rs  mockup.rs
net-sys/src/libc/: macos.rs
net-sys/src/libc/macos/: defs.rs  ifname.rs  ifreq.rs  ioccom.rs  nic.rs  socket.rs  sys.rs  types.rs
net-sys/src/libc/macos/defs/: af.rs  ift.rs  ioc.rs  rtm.rs  sio.rs
net-sys/src/libc/macos/types/: ifmamsghdr.rs  ifreq.rs  rtbuf.rs  rtmsghdr.rs  sockaddrdl.rs
net/src/: ifname.rs  lib.rs  linux.rs  lladdr.rs  macos.rs
net/src/libc/macos/: ifreq.rs  socket.rs  sys.rs
net/src/macos/: ifreq.rs  nic.rs  socket.rs  sys.rs
nic-roaming/: Cargo.toml
nic-roaming-platform/: Cargo.toml
nic-roaming-platform/src/macos/: interface.rs
nic-roaming/src/: main.rs
platform/: Cargo.toml
platform/src/: lib.rs  lladdr.rs  macos.rs
platform/src/linux/: interface.rs
platform/src/macos/: ifr.rs  ifreq.rs  nic.rs  socket.rs  sys.rs
