[package]
name = "net-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { version = "0.2", optional = true }

[dev-dependencies]
mocklib = { path = "../mocklib" }

[features]
default = [ "libc" ]
libc = [ "dep:libc" ]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
